@@ -1,8 +1,8 @@
-argv = ['/Users/jorge/JAVASCRIPT/bin/node-waf', 'configure', 'clean', 'install']
+argv = ['/Users/jorge/JAVASCRIPT/binarios/bin/node-waf', 'configure', 'uninstall', 'distclean', 'configure', 'build', 'install']
 blddir = '/Users/jorge/JAVASCRIPT/node-sound/build'
-commands = {'dist': 0, 'configure': True, 'distcheck': 0, 'install': True, 'build': 0, 'clean': True, 'distclean': 0, 'check': 0, 'uninstall': 0}
+commands = {'dist': 0, 'configure': True, 'distcheck': 0, 'install': False, 'build': True, 'clean': 0, 'distclean': True, 'check': 0, 'uninstall': True}
 cwd = '/Users/jorge/JAVASCRIPT/node-sound'
-environ = {'SSH_AUTH_SOCK': '/tmp/launch-3NWBPc/Listeners', 'VERSIONER_PYTHON_PREFER_32_BIT': 'no', 'TERM_PROGRAM_VERSION': '273.1', 'SHELL': '/bin/bash', 'LOGNAME': 'jorge', 'USER': 'jorge', 'HOME': '/Users/jorge', 'PATH': '/Users/jorge/JAVASCRIPT/bin/:/usr/local/bin:/usr/local/mysql/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/usr/local/git/bin:/usr/X11/bin:/opt/local/bin', 'DISPLAY': '/tmp/launch-brTI6E/org.x:0', 'TMPDIR': '/var/folders/+A/+Atg2INUGw4BX1NCXMla8U+++TY/-Tmp-/', 'TERM_PROGRAM': 'Apple_Terminal', 'LANG': 'es_ES.UTF-8', 'TERM': 'xterm-color', 'Apple_PubSub_Socket_Render': '/tmp/launch-BVwyUI/Render', 'VERSIONER_PYTHON_VERSION': '2.6', 'SHLVL': '1', 'OLDPWD': '/Users/jorge/JAVASCRIPT', '__CF_USER_TEXT_ENCODING': '0x1F9:0:0', 'PWD': '/Users/jorge/JAVASCRIPT/node-sound', '_': '/Users/jorge/JAVASCRIPT/bin/node-waf', 'COMMAND_MODE': 'unix2003'}
+environ = {'SSH_AUTH_SOCK': '/tmp/launch-Gwen8Q/Listeners', 'VERSIONER_PYTHON_PREFER_32_BIT': 'no', 'TERM_PROGRAM_VERSION': '273.1', 'SHELL': '/bin/bash', 'LOGNAME': 'jorge', 'USER': 'jorge', 'HOME': '/Users/jorge', 'PATH': '/Users/jorge/JAVASCRIPT/binarios/bin:/usr/local/bin:/usr/local/mysql/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/usr/local/git/bin:/usr/X11/bin:/opt/local/bin', 'DISPLAY': '/tmp/launch-zA26sf/org.x:0', 'TMPDIR': '/var/folders/+A/+Atg2INUGw4BX1NCXMla8U+++TY/-Tmp-/', 'TERM_PROGRAM': 'Apple_Terminal', 'LANG': 'es_ES.UTF-8', 'TERM': 'xterm-color', 'Apple_PubSub_Socket_Render': '/tmp/launch-fkoadp/Render', 'VERSIONER_PYTHON_VERSION': '2.6', 'SHLVL': '1', 'OLDPWD': '/Users/jorge/JAVASCRIPT/threads_a_gogo', 'MACOSX_DEPLOYMENT_TARGET': '10.6', '__CF_USER_TEXT_ENCODING': '0x1F9:0:0', 'PWD': '/Users/jorge/JAVASCRIPT/node-sound', '_': '/Users/jorge/JAVASCRIPT/binarios/bin/node-waf', 'COMMAND_MODE': 'unix2003'}
 files = []
 hash = 0
 options = {'compile_targets': None, 'force': False, 'verbose': 0, 'nocache': False, 'progress_bar': 0, 'destdir': '', 'keep': False, 'zones': '', 'blddir': '', 'prefix': '/usr/local/', 'jobs': 2, 'srcdir': '', 'check_cxx_compiler': 'g++'}
