@@ -1,6 +1,13 @@
 // bufferifies in a loop to detect leaks.
 
-var Sound= require('./build/default/sound');
+var Sound;
+var paths= ['./build/default/sound', './build/release/sound', 'sound'];
+while (paths.length) {
+  var p= paths.pop();
+  try { Sound= require(p) } catch (e) { continue }
+  console.log("Módulo de sonido encontrado en: '"+ p+ "'");
+  break;
+}
 var sounds= ['sound.wav',
              'Sous La Pluie.mp3',
              'sound.m4a',
